--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./client/main.scss" />
+    <link rel="stylesheet" href="./client/styles/main.scss" />
   </head>
   <body>
     <div id="app"></div>
