create slider with dots

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>React Query!</title>
+    <title>Andrew Bolton Sports Massage</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
+      rel="icon"
+      type="image/webp"
+      href="./client/images/logos/absm-shortcut-icon.webp"
     />
     <link rel="stylesheet" href="./client/styles/main.scss" />
+    <link rel="stylesheet" href="./client/styles/NavBar.scss" />
+    <meta
+      name="description"
+      content="Professional, strong & effective massage to relieve your pain and tension now. Become relaxed, rejuvenated & pain free today."
+    />
   </head>
   <body>
     <div id="app"></div>
