--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="./client/styles/main.scss" />
     <link rel="stylesheet" href="./client/styles/NavBar.scss" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Professional, strong & effective massage to relieve your pain and tension now. Become relaxed, rejuvenated & pain free today."
