--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       content="Professional, strong & effective massage to relieve your pain and tension now. Become relaxed, rejuvenated & pain free today."
     />
   </head>
+
   <body>
     <div id="app"></div>
 
     <script src="./client/index.tsx" type="module"></script>
+    <script src="./client/cliniko.js"></script>
   </body>
 </html>
