--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <div id="app"></div>
 
     <script src="./client/index.tsx" type="module"></script>
-    <script src="./client/cliniko.js"></script>
+    <script src="./client/cliniko.js" type="module"></script>
   </body>
 </html>
